tests/integration/features/views/_validations/03_view_references_nonexisting_field/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: View element 'PRINT_VIEW' references a non-existing field 'NON_EXISTING_FIELD' for grammar element 'REQUIREMENT'.
CHECK: Location: {{.*}}input.sdoc:6:1
CHECK: Hint: Make sure that each View element references an existing field in the grammar for the given grammar element.
